# bootstrap

./: CLAUDE.md  README.md  install.sh  pyproject.toml
.cursor/rules/: bootstrap-docs-conventions.mdc  bootstrap-naming-conventions.mdc
common/: lib.sh
docs/: README.md  cli-refactor-design.md  k8s-dashboard.md  k8s-install.md  pgsql-backup-restore.md  pgsql-test-plan.md  prometheus-install.md
docs/architecture/: README.md  multi-entrypoint-architecture.md
docs/observability/prometheus/: install.md
docs/plans/: README.md
docs/plans/active/: README.md  mcp-evolution.md
docs/plans/backlog/: README.md
docs/plans/completed/: README.md
docs/services/pgsql/: backup-restore.md  test-plan.md
k8s/: install.sh
kind/: README.md  install.sh
observability/prometheus/: README.md  install.sh
pgsql/: README.md  backup.sh  restore.sh  test_integration.sh  test_pgsql.sh
prometheus/: README.md  install.sh
services/pgsql/: README.md
services/pgsql/backup/: run.sh
services/pgsql/restore/: run.sh
services/pgsql/tests/: test_integration.sh  test_pgsql.sh
src/bootstrap/: __init__.py
src/bootstrap/cli/: __init__.py  main.py  tools.py
src/bootstrap/cli/services/: __init__.py  pgsql.py
src/bootstrap/core/: __init__.py
src/bootstrap/core/services/: __init__.py  pgsql.py
src/bootstrap/models/: __init__.py
src/bootstrap/tools/: __init__.py  registry.py
src/bootstrap/utils/: __init__.py  shell.py
tests/unit/: conftest.py  test_cli_structure.py  test_kind_core.py  test_kubeadm_core.py  test_pgsql_core.py  test_tools_registry.py
(+2 files in other folders)
