[project]
name = "bootstrap"
version = "0.1.0"
description = "Infrastructure bootstrap CLI and tool registry"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[project.scripts]
bootstrap = "bootstrap.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bootstrap"]
